<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="simone.pizzeria4.myapplicationnotification.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ReservationFragment"
            app:destination="@id/ReservationFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_GalleryFragment"
            app:destination="@id/GalleryFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_PizzasFragment"
            app:destination="@id/PizzasFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ContactsFragment"
            app:destination="@id/ContactsFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="simone.pizzeria4.myapplicationnotification.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/ReservationFragment"
        android:name="simone.pizzeria4.myapplicationnotification.ReservationFragment"
        android:label="@string/reservation_title"
        tools:layout="@layout/fragment_reservation" />
    <fragment
        android:id="@+id/GalleryFragment"
        android:name="simone.pizzeria4.myapplicationnotification.GalleryFragment"
        android:label="@string/home_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/PizzasFragment"
        android:name="simone.pizzeria4.myapplicationnotification.PizzasFragment"
        android:label="@string/home_pizzas"
        tools:layout="@layout/fragment_pizzas" />
    <fragment
        android:id="@+id/ContactsFragment"
        android:name="simone.pizzeria4.myapplicationnotification.ContactsFragment"
        android:label="@string/contacts_title"
        tools:layout="@layout/fragment_contacts" />
</navigation>